choicesSolver (I'm starting to hate Prisma)
